<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="apidez.com.databinding.viewmodel.IPurchaseViewModel"/>
        <variable
            name="handler"
            type="apidez.com.databinding.view.handler.IPurchaseHandler"/>
    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MyActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.ActionBarTheme"
            app:title="Purchase"
            app:titleTextColor="@color/action_bar_title"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:error="@{viewModel.creditCardError}"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/creditCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addTextChangedListener="@{handler.creditCardWatcher}"
                android:hint="Credit Card"
                android:textSize="@dimen/text_normal_size"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutCreditCard"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            app:error="@{viewModel.emailError}"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addTextChangedListener="@{handler.emailWatcher}"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_normal_size"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:background="@{viewModel.canSubmit ? @drawable/bg_submit : @drawable/bg_inactive_submit}"
            android:gravity="center"
            android:text="SUBMIT"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:onClickListener="@{viewModel.canSubmit ? handler.onSubmit : handler.onInvalid}"/>
    </RelativeLayout>
</layout>